automatically backed up by learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
-
+   <%= @name %>
+   <%= @coach %>
+   <%= @point_guard %>
+   <%= @shooting_guard %>
+   <%= @small_forward %>
+   <%= @power_forward %>
+   <%= @center %>
 
  </body>
 </html>
-
-
