--- a/views/team.erb
+++ b/views/team.erb
@@ -5,13 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-   <%= @name %>
-   <%= @coach %>
-   <%= @point_guard %>
-   <%= @shooting_guard %>
-   <%= @small_forward %>
-   <%= @power_forward %>
-   <%= @center %>
+  <p> <%= @name %> </p>
+   <p><%= @coach %> </p>
+   <p><%= @point_guard %> </p>
+   <p><%= @shooting_guard %> </p>
+   <p><%= @small_forward %> </p>
+   <p><%= @power_forward %> </p>
+   <p><%= @center %> </p>
 
  </body>
 </html>
