--- a/views/team.erb
+++ b/views/team.erb
@@ -5,13 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-  <p> <%= @name %> </p>
-   <p><%= @coach %> </p>
-   <p><%= @point_guard %> </p>
-   <p><%= @shooting_guard %> </p>
-   <p><%= @small_forward %> </p>
-   <p><%= @power_forward %> </p>
-   <p><%= @center %> </p>
+  <p> Name: <%= @name %> </p>
+   <p>Coach: <%= @coach %> </p>
+   <p>Point Guard: <%= @point_guard %> </p>
+   <p>Shooting Guard: <%= @shooting_guard %> </p>
+   <p>Small Forward: <%= @small_forward %> </p>
+   <p>Power Forward: <%= @power_forward %> </p>
+   <p>Center: <%= @center %> </p>
 
  </body>
 </html>
