automatically backed up by learn

--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,7 @@
   <title>Basketball Team</title>
  </head>
  <body>
-  <p> Name: <%= @name %> </p>
+  <p>Team Name: <%= @name %> </p>
    <p>Coach: <%= @coach %> </p>
    <p>Point Guard: <%= @point_guard %> </p>
    <p>Shooting Guard: <%= @shooting_guard %> </p>
